basic css content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,3 +13,35 @@ html {
   font-family: "JosefinSans";
   font-size: 16px;
 }
+body {
+}
+main {
+}
+header {
+}
+header img {
+}
+figure {
+}
+picture {
+}
+.content {
+}
+h1 {
+}
+h1 span {
+}
+p {
+}
+form {
+}
+.input-wrapper {
+}
+#email-input {
+}
+.input-wrapper img {
+}
+button {
+}
+button img {
+}
