--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,9 @@
   src: url("../fonts/JosefinSans-VariableFont_wght.ttf");
 }
 :root {
+  --Desaturated-Red: hsl(0, 36%, 70%);
+  --Soft-Red: hsl(0, 93%, 68%);
+  --Dark-Grayish-Red: hsl(0, 6%, 24%);
 }
 * {
   padding: 0;
@@ -12,36 +15,264 @@
 html {
   font-family: "JosefinSans";
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 body {
+  background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+  position: relative;
 }
 main {
+  height: 100%;
 }
 header {
+  height: 5.24rem;
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+  position: relative;
 }
 header img {
+  width: 6.2rem;
 }
 figure {
+  height: 15.625rem;
+  overflow: hidden;
 }
-picture {
+picture img {
+  width: 100%;
 }
 .content {
+  padding: 4.2rem 2rem 5.75rem;
+}
+h1,
+p {
+  text-align: center;
 }
 h1 {
+  color: var(--Dark-Grayish-Red);
+  margin: auto;
+  font-size: clamp(2.3rem, 1vw, 2.6rem);
+  text-transform: uppercase;
+  line-height: 3.1rem;
+  letter-spacing: clamp(0.4rem, 1vw, 1.1rem);
 }
 h1 span {
+  color: var(--Desaturated-Red);
+  font-weight: 300;
+  display: block;
 }
 p {
+  color: var(--Desaturated-Red);
+  margin-top: 1.875rem;
+  padding: 0 0.3rem;
+  font-size: 0.89rem;
+  line-height: 1.5625rem;
 }
 form {
+  border: 1px solid var(--Desaturated-Red);
+  border-radius: 2rem;
+  margin-top: 2.5rem;
+  display: flex;
+  align-items: center;
+  height: 3rem;
+  position: relative;
+}
+form::after {
+  bottom: -2rem;
+  left: 1.5rem;
+  color: var(--Soft-Red);
+  position: absolute;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.input-error {
+  border: 2px solid var(--Soft-Red);
+}
+.input-error::after {
+  opacity: 1;
+  content: "Please provide a valid email";
+}
+.input-error .icon-error {
+  opacity: 1;
 }
 .input-wrapper {
+  position: relative;
+  display: inherit;
+  align-items: center;
+  flex: 4;
 }
 #email-input {
+  border: none;
+  padding-left: 1.5rem;
+  color: var(--Dark-Grayish-Red);
+  width: 100%;
 }
-.input-wrapper img {
+#email-input::placeholder {
+  color: var(--Desaturated-Red);
+}
+#email-input:focus {
+  outline: transparent;
+}
+.icon-error {
+  position: absolute;
+  right: 1rem;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.show-icon {
+  opacity: 1;
 }
 button {
+  background: linear-gradient(
+    135deg,
+    hsl(0, 80%, 86%) 0%,
+    hsl(0, 74%, 74%) 100%
+  );
+  box-shadow: 0 9px 8px 3px hsla(0, 36%, 70%, 0.224);
+  border: none;
+  border-radius: 2rem;
+  color: transparent;
+  cursor: pointer;
+  flex: 1;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: transparent;
+  position: relative;
 }
 button img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+button[type="submit"]:hover {
+  background-color: linear-gradient(
+    135deg,
+    hsl(0, 0%, 100%),
+    hsl(0, 100%, 98%)
+  );
+}
+.alert-success {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  height: 15vh;
+  width: 90%;
+  background-color: hsl(0, 100%, 98%);
+  border-radius: 1rem;
+  box-shadow: 0 5px 20px rgba(134, 134, 134, 0.2);
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.alert-success p {
+  margin: 0;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  padding: 3%;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  header,
+  .content {
+    width: 50%;
+    float: left;
+  }
+  header img {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+  }
+  figure {
+    float: right;
+    width: 50%;
+    height: 100vh;
+  }
+  figure img {
+    object-fit: cover;
+    height: 100%;
+  }
+  .content {
+    padding-top: 2.2rem;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: calc(100vh - 83.83px);
+    justify-content: center;
+    gap: 2.5rem;
+  }
+  .content h1 {
+    margin: 0;
+  }
+  .content p {
+    font-size: 1.1875rem;
+    margin-top: 0;
+  }
+  form {
+    margin-top: 0;
+  }
+  .alert-success {
+    width: 30%;
+    top: 2rem;
+    bottom: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  main {
+    padding-left: 6.25rem;
+  }
+  header,
+  .content {
+    width: calc(100% - 632px);
+  }
+  header {
+    padding: 0;
+  }
+  header img {
+    width: 9.875rem;
+  }
+  .content {
+    padding: 0;
+    height: calc(100vh - 83.83px);
+  }
+  .content h1,
+  .content p {
+    text-align: left;
+  }
+  .content h1 {
+    font-size: 4rem;
+    margin: 0;
+    line-height: 4.9375rem;
+  }
+
+  .content p {
+    padding: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  header {
+    padding-top: 10rem;
+  }
+  .content {
+    height: calc(100vh - 160px);
+  }
+  .content p,
+  form {
+    width: 32.56rem;
+  }
+}
+@media screen and (min-width: 1440px) {
+  figure {
+    width: 38.125rem;
+  }
 }
