--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,7 +45,7 @@ picture img {
   padding: 4.2rem 2rem 5.75rem;
 }
 h1,
-p {
+.content p {
   text-align: center;
 }
 h1 {
@@ -61,7 +61,7 @@ h1 span {
   font-weight: 300;
   display: block;
 }
-p {
+.content p {
   color: var(--Desaturated-Red);
   margin-top: 1.875rem;
   padding: 0 0.3rem;
@@ -104,14 +104,15 @@ form::after {
 #email-input {
   border: none;
   padding-left: 1.5rem;
-  color: var(--Dark-Grayish-Red);
+  font-size: 1rem;
   width: 100%;
 }
 #email-input::placeholder {
-  color: var(--Desaturated-Red);
+  color: hsla(0, 36%, 70%, 0.509);
 }
 #email-input:focus {
   outline: transparent;
+  color: var(--Dark-Grayish-Red);
 }
 .icon-error {
   position: absolute;
@@ -219,11 +220,8 @@ button:hover {
   }
   .content p {
     font-size: 1.1875rem;
-    margin-top: 0;
   }
-  form {
-    margin-top: 0;
-  }
+
   .alert-success {
     width: 30%;
     top: 2rem;
@@ -250,6 +248,7 @@ button:hover {
   .content {
     padding: 0;
     height: calc(100vh - 83.83px);
+    gap: 0;
   }
   .content h1,
   .content p {
@@ -262,10 +261,17 @@ button:hover {
     line-height: 4.3375rem;
     width: 23.5rem;
   }
-
   .content p {
     padding: 0;
     font-size: 1.0075rem;
+    line-height: 1.8rem;
+    margin-top: 1.375rem;
+  }
+  form {
+    height: 3.5rem;
+  }
+  button {
+    flex: 1.2;
   }
 }
 @media screen and (min-width: 1200px) {
